2020-April-21 Struan Robertson

		* Reaction.h, all reaction classes, AnalyticalRepresentation.cpp, System.cpp: Method 
		"normalizeRateCoefficient" altered to use a reference and made pure virtual to prevent 
		implementation assumptions. This method remains a null operation for unimolecular reactions.

2020-April-19 Struan Robertson

		* ThermodynamicTable.cpp: Add check for undeclared transition states.

		* PriorDistribtuion.cpp: Improved output for od prior distribution to .test file.

2020-April-13 Struan Robertson

		* Reaction.h, AssociationReaction.cpp, SecondOrderAssocReaction.cpp, ExchangeReaction.cpp,
		AnalyticalRepresentation.cpp: Update of methods for normalizing pseudo first order reactions
		to second order reactions.

		* CollisionOperator.cpp: Check that initial distribution is properly normalized.

		* Baseline update.

2020-April-04 Struan Robertson

		* EckartCoefficients.cpp: Revised code to reflect change in Schema.

		* Schema update.

		* Documentation update.

		* Win32 baseline update.

2020-March-29 Struan Robertson

		* BoltzmannDistribution.cpp: Added excitation field to distribution to allow 
		approximate modelling of photo-excitation.

		* Minor code updates to fix compiler warnings.

2020-March-28 Struan Robertson

		* CollisionOperator.h/.cpp, Marquardt.cpp: Revert fix for Marquardt performance issue
		in check-in 1480 in favour of fix based on control flags.

		* ConditionsManager.h: Fix for QA break related to check-in 1481.

2020-March-21 Struan Robertson

		* ConditionsManager.h/.cpp: Fix for PT set bug.

		* ExchangeReaction.h/.cpp: Added code to account for a reservoir state.

		* ReactionManager.cpp: Simplified reaction type decision logic. 

		* Minor code updates to fix compiler warnings.

		* Documentation update.

		* Win32 baseline update. 

		* Schema update.

2020-March-17 Struan Robertson

		* CollisionOperator.h/.cpp: Altered to improve speed of grain and species population 
		calculation.
