@@ -79,9 +79,9 @@ namespace mesmer
       // Distribute adduct loss rate according to fragmentation loss rate.
       // Use detailed balance to determine gain from association reaction.
 
-      for (size_t k = 0; k < rColloptrsize; ++k) {
+      for (size_t k = rShiftedGrains, ll(0); k < rColloptrsize; ++k, ++ll) {
         size_t jj(rctLocation + k - rShiftedGrains) ;
-        qd_real eqmRatio     = Keq*qd_real(pdtEq[i])/qd_real(rctEq[k]) ;
+        qd_real eqmRatio     = Keq*qd_real(pdtEq[i])/qd_real(rctEq[ll]) ;
         (*CollOptr)[jj][ii]  = disMicroRateCoeff*qd_real(fragDist[k]) ; // Gain of pseudoisomer from adduct.
         (*CollOptr)[ii][jj]  = (*CollOptr)[jj][ii]*eqmRatio ;           // Gain of adduct from pseudoisomer.
         (*CollOptr)[jj][jj] -= (*CollOptr)[ii][jj] ;                    // Loss from pseudoisomer to adduct.
