@@ -1,3 +1,10 @@
+2020-April-23 Struan Robertson
+
+		* Reaction.h, ExchangeReaction.h/.cpp: Tunnelling term added to bimolecular exchange 
+		reaction.
+
+		* PseudoIsomerizationReaction.cpp: Fixed bug related to reservoir state.
+
 2020-April-21 Struan Robertson
 
 		* Reaction.h, all reaction classes, AnalyticalRepresentation.cpp, System.cpp: Method 
@@ -8,7 +15,7 @@
 
 		* ThermodynamicTable.cpp: Add check for undeclared transition states.
 
-		* PriorDistribtuion.cpp: Improved output for od prior distribution to .test file.
+		* PriorDistribtuion.cpp: Improved output for of prior distribution to .test file.
 
 2020-April-13 Struan Robertson
 
